[project]
name = "data-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.9",
    "marimo>=0.20.2",
    "mypy>=1.19.1",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
]
